--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
 
 </section>
+<section>
 <div class="hot-deal">
 <div class="featured-title">
     <h3>Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h3>
@@ -62,16 +63,23 @@
 
 
 </div>
-<section>
-
-
-
-
-
 </section>
+<section class="insta">
+<h3 class="featured-title">Instagram</h3>
+<p class="inspara">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+<div class="ins-pic">
+    <img class="ins2" src="/Flower Asset/Rectangle 4.png" alt="">
+    <img class="ins1" src="/Flower Asset/Flower 01.png" alt="">
+   
+   
+    <img class="ins4" src="/Flower Asset/pngwing 6.png" alt="">
+    <img class="ins3" src="/Flower Asset/Rectangle 5.png" alt="">
+</div>
 
 
 
+    
+</section>
 
 
 </main>
