--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Fresh Flowers. Local Growers.</p>
     </div>
     <div>
-        <img src="/Flower Asset/Group 59.png" alt="">
+        <img src="./Flower Asset/Group 59.png" alt="">
         <p>24/7 Free Support.</p>
     </div>
 </div> 
