--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     normal distribution of letters</p>
                 <button class="primary-button">Shop now</button>
             </div>
-            <img class="img" src="/Flower Asset/pngwing 10.png" alt="">
+            <img class="img" src="./pngwing 10.png" alt="">
         </div>
     </header>
     <main>
@@ -33,16 +33,16 @@
             <div class="flowerimg-container">
 
                 <div class="box1">
-                    <img class="img-1" src="/Flower Asset/pngwing 6.png" alt="">
+                    <img class="img-1" src="./pngwing 6.png" alt="">
                     <p class="flower-name">Pink Flower Tree</p>
 
                 </div>
                 <div class="flower">
-                    <img class="img-2" src="/Flower Asset/pngwing 7.png" alt="">
+                    <img class="img-2" src="./pngwing 7.png" alt="">
                     <p class="flower-name">Pink Flower Tree</p>
                 </div>
                 <div class="flower">
-                    <img class="img-3" src="/Flower Asset/pngwing 8.png" alt="">
+                    <img class="img-3" src="./pngwing 8.png" alt="">
                     <p class="flower-name">Pink Flower Tree</p>
 
 
@@ -55,15 +55,15 @@
         <section>
 <div class="emo">
     <div>
-       <img src="/Flower Asset/Group 57.png" alt="">
+       <img src="./Group 57.png" alt="">
        <p>Same Day Delivery, Click & Collect.</p>
     </div>
     <div>
-        <img src="/Flower Asset/Group 58.png" alt="">
+        <img src="./Group 58.png" alt="">
         <p>Fresh Flowers. Local Growers.</p>
     </div>
     <div>
-        <img src="./Flower Asset/Group 59.PNG" alt="">
+        <img src="./Group 59.png" alt="">
         <p>24/7 Free Support.</p>
     </div>
 </div> 
@@ -86,7 +86,7 @@
 
                 </div>
                 <div>
-                    <img class="rose" src="/Flower Asset/pngwing 8.png" alt="">
+                    <img class="rose" src="./pngwing 8.png" alt="">
                 </div>
 
 
